# kallia-ai

./: README.md  config_bot.json  main.py  pyproject.toml  run.bat
data/: agents.db  pesonality.md
src/: assistentbot.py  llm.py  stt.py  time_exec.py  tools.py  tts.py
